integrated-ai-company-fetch